--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,14 +19,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ShellyWalldisplayHomeassistant"
+        android:theme="@style/Theme.ShellyElevate"
         tools:targetApi="31">
         
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ShellyWalldisplayHomeassistant">
+            android:theme="@style/Theme.ShellyElevate">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
