--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         </activity>
 
         <activity android:name=".screensavers.activities.DigitalClockScreenSaverActivity"/>
+        <activity android:name=".screensavers.activities.DigitalClockAndDateScreenSaverActivity"/>
 
         <receiver
             android:name=".BootReceiver"
