--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
     <uses-permission
         android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS"
         tools:ignore="HighSamplingRate" />
-
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:name=".ShellyElevateApplication"
@@ -27,13 +26,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ShellyElevateV2"
-        android:usesCleartextTraffic="true"
-        >
+        android:usesCleartextTraffic="true">
+        <receiver
+            android:name=".screensavers.UserInteractionReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
         <service
             android:name=".backbutton.FloatingBackButtonService"
             android:enabled="true"
-            android:exported="false"/>
-
+            android:exported="false" />
         <service
             android:name=".backbutton.BackAccessibilityService"
             android:exported="true"
@@ -65,7 +67,6 @@
             android:hardwareAccelerated="true"
             android:label="ShellyElevateV2"
             android:theme="@style/Theme.ShellyElevateV2" />
-
         <activity android:name=".screensavers.activities.DigitalClockAndDateScreenSaverActivity" />
 
         <receiver
@@ -75,6 +76,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
